# ct-01-rcli

./: Cargo.toml  cliff.toml  test.rest
fixtures/: b64.txt  blake3.txt  cargoinstalllist.txt  ed25519.pk  ed25519.sk  index.html
src/: index.html  lib.rs  main.rs  opts.rs  process.rs  testhash.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  text.rs
