[package]
name = "rcli"
version = "0.1.0"
authors = ["LIN"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# [[bin]]
# name = "testhash"
# path = "src/testhash.rs"

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] } # cargo add axum --features http2 --features  query --features tracing
base64 = "0.22.1"
blake3 = "1.5.1"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] } # cargo add ed25519_dalek --features rand_core
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "net", "macros", "fs"] } # cargo add tokio --features rt,rt-multi-thread,net,macros,fs
tracing = "0.1.40" # cargo add tracing
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] } # cargo add tracing-subscriber --features env-filter
zxcvbn = "2.2.2" # cargo add zxcvbn
# duckdb = { version = "0.10.2", features = ["bundled"] }
